# orchestration-framework

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_API  Observable Agents Quickstart.ipynb  Quickstart.ipynb  README.md  docker-compose.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: pypi.yml
agent_gateway/: .gitignore  __init__.py
agent_gateway/agents/: agent.py  tools.py
agent_gateway/chains/: chain.py  llm_chain.py
agent_gateway/executors/: agent_executor.py  schema.py
agent_gateway/gateway/: constants.py  gateway.py  output_parser.py  planner.py  task_processor.py
agent_gateway/tools/: __init__.py  base.py  logger.py  schema.py  snowflake_prompts.py  snowflake_tools.py  tools.py  utils.py
agent_gateway/tools/data/: sec_chunk_search.parquet  sp500.parquet  sp500_semantic_model.yaml
demo_app/: access-via-keypair.py  demo_app.py  echo_service.py  gateway.py  generateJWT.py  service.sql  truagent_demo_app.py
tests/: README.md  __init__.py  conftest.py  test_demo_app.py  test_quickstart.py  test_utils.py
tests/data/: response.json  server.py  sql_response.py
