[project]
name = "orchestration-framework"
version = "0.1.0"
requires-python = ">=3.9"
description = "Multi-agent framework for Snowflake"
authors = [
  { name = "Alejandro Herrera", email = "alejandro.herrera@snowflake.com" },
]
readme = "README.md"

dependencies = [
    "snowflake-snowpark-python>=1.22.1",
    "langchain>=0.3.2",
    "asyncio>=3.4.3",
    "aiohttp>=3.10.9",
    "pydantic>=2.9.2"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
    "pytest>=8.3.3"
]
streamlit = ["streamlit >= 1.39.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_gateway"]
